correctly scalign boundaries

--- a/style.css
+++ b/style.css
@@ -61,11 +61,13 @@ body {
 #drop-frame {
   position: absolute;
   left: 0;
-  top: 0px;
-  background-image: url(./images/template_1.png);
+  top: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+}
+
+#drop-frame img {
+  width: 100%;
 }
 
 .drag-container {
